--- a/style.css
+++ b/style.css
@@ -33,6 +33,6 @@ Text Domain: minimalzerif
 
 h1,
 h2 {
-	font-family: 'Montserrat', sans-serif !important;
+	font-family: 'Roboto', sans-serif !important;
 	font-weight: 700 !important;
 }
