--- a/style.css
+++ b/style.css
@@ -64,8 +64,8 @@ h2 {
 	border: 1px solid #404040;
 }
 
-.focus-box .service-icon:hover {
-	border: 10px solid #404040 !important;
+.focus-box .service-icon {
+	border: none !important;
 }
 
 .red-border-bottom:before {
@@ -90,4 +90,8 @@ h2 {
 
 a {
 	color: #404040 !important;
+}
+
+.focus .row .focus-box {
+	border-right: 1px solid #eee;
 }
