--- a/style.css
+++ b/style.css
@@ -27,10 +27,10 @@ Text Domain: minimalzerif
 	color: #404040 !important;
 }
 
-h1,
-h2 {
-	font-family: 'Roboto', sans-serif !important;
-	font-weight: 700 !important;
+.section-header h2 {
+	font-family: 'Homemade Apple', sans-serif;
+	font-size: 30px;
+	text-transform: lowercase;
 }
 
 .testimonial {
