Issue (Meniul punel sub un hamburger icon cu text menu langa iconita) fixed.

--- a/style.css
+++ b/style.css
@@ -127,3 +127,9 @@ ul.nav > li.current_page_item > a:before {
 	margin-top: 0;
 	margin-bottom: 20px;
 }
+
+@media only screen and (max-width: 768px) {
+	.hamburger-icon {
+		display: none;
+	}
+}
