--- a/style.css
+++ b/style.css
@@ -150,6 +150,11 @@ ul.nav > li.current_page_item > a:before {
 	color: #404040;
 }
 
+.zerif-copyright-box {
+	padding: 30px 0;
+	color: #939393;
+}
+
 @media only screen and (max-width: 768px) {
 	.hamburger-icon {
 		display: none;
