--- a/style.css
+++ b/style.css
@@ -156,6 +156,11 @@ ul.nav > li.current_page_item > a:before {
 }
 
 .our-team {
+	padding-top: 0;
+}
+
+.our-team .container {
+	padding-top: 100px;
 	border-top: 2px solid #404040;
 }
 
