--- a/style.css
+++ b/style.css
@@ -164,6 +164,10 @@ ul.nav > li.current_page_item > a:before {
 	border-top: 2px solid #404040;
 }
 
+.red-border-bottom:before {
+	bottom: -17px;
+}
+
 @media only screen and (max-width: 768px) {
 	.hamburger-icon {
 		display: none;
