--- a/style.css
+++ b/style.css
@@ -101,54 +101,6 @@ Text Domain: minimalzerif
 	text-decoration: none;
 }
 
-ul.nav > li.current_page_item > a:before {
-	background: #404040;
-}
-
-.hamburger-icon {
-	margin: 20px -15px 10px 0;
-	color: #fff;
-	float: right;
-}
-
-.hamburger-icon .fa {
-	font-size: 24px;
-}
-
-.hamburger-icon span {
-	margin-left: 5px;
-}
-
-.navbar-inverse .navbar-nav {
-	clear: both;
-}
-
-.navbar-inverse .navbar-nav > li {
-	margin-top: 0;
-	margin-bottom: 20px;
-}
-
-.navbar-inverse .navbar-nav > li a {
-	color: #fff !important;
-}
-
-.navbar-inverse {
-	background-color: transparent !important;
-	box-shadow: none !important;
-}
-
-.navbar-inverse.fix {
-	background: #fff !important;
-}
-
-.navbar-inverse.fix .navbar-nav > li > a {
-	color: #404040 !important;
-}
-
-.navbar-inverse.fix .hamburger-icon {
-	color: #404040;
-}
-
 .zerif-copyright-box {
 	padding: 30px 0;
 	color: #939393;
@@ -171,8 +123,137 @@ ul.nav > li.current_page_item > a:before {
 	bottom: -17px;
 }
 
-@media only screen and (max-width: 768px) {
-	.hamburger-icon {
-		display: none;
-	}
+.top-navigation {
+	width: 100%;
+	position: absolute;
+	top: 0;
+	right: 0;
+	text-align: left;
+	z-index: 999;
+}
+
+.top-navigation.fixed-navigation {
+	background: #fff;
+	position: fixed;
+	border-bottom: 1px solid #eee;
+}
+
+.menu-color.logged-in .top-navigation,
+.logged-in .top-navigation.fixed-navigation {
+	margin-top: 32px;
+}
+
+.top-navigation.fixed-navigation .container .logo-text .logo-name,
+.top-navigation.fixed-navigation .container .logo-text .logo-description,
+.top-navigation.fixed-navigation .container .hambuger-menu,
+.top-navigation.fixed-navigation .container .header-menu ul li a {
+	color: #404040;
+}
+
+.menu-color .top-navigation .container .logo-text .logo-name,
+.menu-color .top-navigation .container .logo-text .logo-description,
+.menu-color .top-navigation .container .hambuger-menu,
+.menu-color .top-navigation .container .header-menu ul li a {
+	color: #404040;
+}
+
+.top-navigation.fixed-navigation .container .logo-image {
+	background: url("images/black-logo.png") no-repeat center;
+}
+
+.top-navigation .container {
+	padding: 30px 0;
+	position: relative;
+	overflow: hidden;
+}
+
+.top-navigation .container .logo-image {
+	width: 150px;
+	height: 58px;
+	background: url("images/white-logo.png") no-repeat center;
+	-webkit-background-size: contain;
+	-moz-background-size: contain;
+	-ms-background-size: contain;
+	-o-background-size: contain;
+	background-size: contain;
+	float: left;
+}
+
+.top-navigation .container .logo-text {
+	font-family: "Lato", sans-serif;
+	float: left;
+}
+
+.top-navigation .container .logo-text .logo-name {
+	line-height: 36px;
+	font-size: 34px;
+	color: #fff;
+	text-transform: uppercase;
+}
+
+.top-navigation .container .logo-text .logo-name:hover {
+	text-decoration: none;
+}
+
+.top-navigation .container .logo-text .logo-description {
+	color: #fff;
+}
+
+.top-navigation .container .hambuger-menu {
+	line-height: 19px;
+	cursor: pointer;
+	color: #fff;
+	float: right;
+}
+
+.top-navigation .container .hambuger-menu .fa {
+	margin-right: 5px;
+	font-size: 18px;
+}
+
+.top-navigation .container .hambuger-menu span {
+	font-size: 12px;
+	text-transform: uppercase;
+}
+
+.top-navigation .container .header-menu {
+	position: absolute;
+	right: -100%;
+	bottom: 30px;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	-o-transition: all 0.3s;
+	-ms-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+.top-navigation .container .header-menu.open {
+	right: 0;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	-o-transition: all 0.3s;
+	-ms-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+.top-navigation .container .header-menu ul {
+	margin-bottom: 0;
+	list-style-type: none;
+}
+
+.top-navigation .container .header-menu ul li {
+	margin-right: 15px;
+	float: left;
+}
+
+.top-navigation .container .header-menu ul li:last-child {
+	margin-right: 0;
+}
+
+.top-navigation .container .header-menu ul li a {
+	color: #fff;
+}
+
+.top-navigation .container .header-menu ul li a:hover {
+	text-decoration: none;
 }
