--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ Template: zerif-lite
 Version: 1.1
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Tags: light, responsive-layout, one-column, custom-colors, custom-header, custom-menu, featured-images, sticky-post, translation-ready
+Tags: light, responsive-layout, one-column, custom-colors, custom-header, custom-menu, featured-images, sticky-post, translation-ready, responsive-layout, one-column, theme-options
 Text Domain: minimalzerif
 */
 
