--- a/style.css
+++ b/style.css
@@ -257,3 +257,8 @@ Text Domain: minimalzerif
 .top-navigation .container .header-menu ul li a:hover {
 	text-decoration: none;
 }
+
+.contact-us address {
+	font-style: italic;
+	color: #fff;
+}
